--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
         "persistent": false
     },
     "browser_action": {
-        "default_icon": "tab-icon.jpg",
+        "default_icon": "/images/hand.png",
         "default_title": "Silencer"
     },
     "permissions": ["tabs"]
